[package]
name = "mot-rs"
repository = "https://github.com/LdDl/mot-rs"
readme = "README.md"
keywords = ["computer-vision", "kalman", "tracking", "filtering"]
license = "MIT"
version = "0.0.7"
edition = "2021"
authors = ["Dimitrii Lopanov <sexykdi@gmail.com>"]
exclude = ["/.github", "/ci", "/tools", "release.toml", "rustfmt.toml"]
description = "Dead simple multi object tracking in Rust"
homepage = "https://github.com/LdDl/mot-rs"
documentation = "https://docs.rs/mot-rs"
categories = ["algorithms", "computer-vision", "mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kalman-rust = "0.2.2"
uuid = { version = "1.3.1", features = ["serde", "v4"] }
chrono = "0.4.24"
itertools = "0.10.5"