[package]
name = "mot-rs"
repository = "https://github.com/LdDl/mot-rs"
readme = "README.md"
keywords = ["computer-vision", "kalman", "tracking", "filtering"]
license = "MIT"
version = "0.2.3"
edition = "2021"
authors = ["Dimitrii Lopanov <sexykdi@gmail.com>"]
exclude = ["/.github", "/ci", "/tools", "release.toml", "rustfmt.toml"]
description = "Dead simple multi object tracking in Rust"
homepage = "https://github.com/LdDl/mot-rs"
documentation = "https://docs.rs/mot-rs"
categories = ["algorithms", "computer-vision", "mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kalman-rust = "0.2.4"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
chrono = "0.4.31"
itertools = "0.11.0"
pathfinding = "4.14.0"

